st/mesa: replace assertion w/ conditional in framebuffer invalidation

https://bugs.freedesktop.org/show_bug.cgi?id=30632

NOTE: this is a candidate for the 7.9 branch.